@@ -7,5 +7,5 @@ my $n = 0;
 
 print "1..1\n";
 
-test ++$n, simple_fetch "/subr/";
+test ++$n, simple_fetch "/subr/index.html";
 
